feat: Exact(Input|Output)Single
