# internal/server/http.go
@@ -1,7 +1,7 @@
 package server
 
 import (
-	v1 "uniswap/api/swap/v1"
+	v1 "uniswap/api/router/v1"
 	"uniswap/internal/conf"
 	"uniswap/internal/service"
 
@@ -12,8 +12,7 @@ import (
 
 // NewHTTPServer new an HTTP server.
 func NewHTTPServer(c *conf.Server, logger log.Logger,
-	swap *service.SwapService,
-	pool *service.PoolService,
+	router *service.RouterService,
 ) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
@@ -30,6 +29,6 @@ func NewHTTPServer(c *conf.Server, logger log.Logger,
 		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
 	}
 	srv := http.NewServer(opts...)
-	v1.RegisterPoolHTTPServer(srv, pool)
+	v1.RegisterRouterHTTPServer(srv, router)
 	return srv
 }
