# openapi.yaml
@@ -3,19 +3,19 @@
 
 openapi: 3.0.3
 info:
-    title: Pool API
+    title: Router API
     version: 0.0.1
 paths:
-    /pool:
+    /router/exactInputSingle:
         post:
             tags:
-                - Pool
-            operationId: Pool_CreatePool
+                - Router
+            operationId: Router_ExactInputSingle
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/api.swap.CreatePoolRequest'
+                            $ref: '#/components/schemas/api.router.v1.ExactInputSingleRequest'
                 required: true
             responses:
                 "200":
@@ -23,53 +23,76 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.swap.CreatePoolReply'
-    /pool/{token0}/{token1}/{fee}:
-        get:
+                                $ref: '#/components/schemas/api.router.v1.ExactInputSingleReply'
+    /router/exactOutputSingle:
+        post:
             tags:
-                - Pool
-            operationId: Pool_GetPool
-            parameters:
-                - name: token0
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-                - name: token1
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-                - name: fee
-                  in: path
-                  required: true
-                  schema:
-                    type: integer
-                    format: uint32
+                - Router
+            operationId: Router_ExactOutputSingle
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.router.v1.ExactOutputSingleRequest'
+                required: true
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.swap.GetPoolReply'
+                                $ref: '#/components/schemas/api.router.v1.ExactOutputSingleReply'
 components:
     schemas:
-        api.swap.CreatePoolReply:
-            type: object
-            properties: {}
-        api.swap.CreatePoolRequest:
+        api.router.v1.ExactInputSingleReply:
             type: object
             properties:
-                token0:
+                amountOut:
                     type: string
-                token1:
+        api.router.v1.ExactInputSingleRequest:
+            type: object
+            properties:
+                tokenIn:
+                    type: string
+                tokenOut:
                     type: string
                 fee:
                     type: integer
                     format: uint32
-        api.swap.GetPoolReply:
+                recipient:
+                    type: string
+                deadline:
+                    type: string
+                amountIn:
+                    type: string
+                amountOutMinimum:
+                    type: string
+                priceLimit:
+                    type: string
+        api.router.v1.ExactOutputSingleReply:
             type: object
-            properties: {}
+            properties:
+                amountIn:
+                    type: string
+        api.router.v1.ExactOutputSingleRequest:
+            type: object
+            properties:
+                tokenIn:
+                    type: string
+                tokenOut:
+                    type: string
+                fee:
+                    type: integer
+                    format: uint32
+                recipient:
+                    type: string
+                deadline:
+                    type: string
+                amountOut:
+                    type: string
+                amountInMaximum:
+                    type: string
+                priceLimit:
+                    type: string
 tags:
-    - name: Pool
+    - name: Router
